--- a/PrismFramework.iOS.csproj
+++ b/PrismFramework.iOS.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IO\Directory.cs" />
+    <Compile Include="UI\Media\Transform.cs" />
     <Compile Include="UI\Views\ViewStack.cs" />
     <Compile Include="IO\File.cs" />
     <Compile Include="Extensions\iOSExtensions.cs" />
@@ -97,13 +98,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup />
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Prism-Core\PrismFramework.csproj">
       <Project>{BF3EDE00-0B3E-4C83-82E0-3ED08BE0E2E5}</Project>
       <Name>PrismFramework</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UI\Media\Inking\" />
   </ItemGroup>
 </Project>
