--- a/PrismFramework.iOS.csproj
+++ b/PrismFramework.iOS.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IO\Directory.cs" />
+    <Compile Include="Resources.cs" />
     <Compile Include="UI\Media\Transform.cs" />
     <Compile Include="UI\Views\ViewStack.cs" />
     <Compile Include="IO\File.cs" />
@@ -71,7 +72,6 @@
     <Compile Include="UI\Controls\TimePicker.cs" />
     <Compile Include="UI\Controls\ListBoxSectionHeader.cs" />
     <Compile Include="UI\Controls\SearchBox.cs" />
-    <Compile Include="SystemParameters.cs" />
     <Compile Include="LazyLoader.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="iOSInitializer.cs" />
@@ -79,7 +79,6 @@
     <Compile Include="Systems\Device.cs" />
     <Compile Include="UI\Alert.cs" />
     <Compile Include="UI\Media\FontFamily.cs" />
-    <Compile Include="UI\Media\Fonts.cs" />
     <Compile Include="UI\Media\Imaging\ImageCompositor.cs" />
     <Compile Include="UI\Media\Imaging\ImageSource.cs" />
     <Compile Include="UI\Controls\ViewStackHeader.cs" />
