--- a/PrismFramework.iOS.csproj
+++ b/PrismFramework.iOS.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IO\Directory.cs" />
     <Compile Include="Resources.cs" />
+    <Compile Include="UI\Controls\ActivityIndicator.cs" />
     <Compile Include="UI\Media\Transform.cs" />
     <Compile Include="UI\Views\ViewStack.cs" />
     <Compile Include="IO\File.cs" />
