--- a/PrismFramework.iOS.csproj
+++ b/PrismFramework.iOS.csproj
@@ -96,6 +96,7 @@
     <Compile Include="UI\Media\Inking\InkStroke.cs" />
     <Compile Include="UI\Controls\InkCanvas.cs" />
     <Compile Include="UI\VisualTreeObject.cs" />
+    <Compile Include="UI\Controls\ProgressBar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup />
