--- a/PrismFramework.iOS.csproj
+++ b/PrismFramework.iOS.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Resources.cs" />
     <Compile Include="UI\Controls\ActivityIndicator.cs" />
     <Compile Include="UI\Media\Transform.cs" />
+    <Compile Include="UI\Shapes\Line.cs" />
     <Compile Include="UI\Views\ViewStack.cs" />
     <Compile Include="IO\File.cs" />
     <Compile Include="Extensions\iOSExtensions.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="UI\Controls\InkCanvas.cs" />
     <Compile Include="UI\VisualTreeObject.cs" />
     <Compile Include="UI\Controls\ProgressBar.cs" />
+    <Compile Include="UI\Shapes\Ellipse.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup />
