Moved AudioPlayer to the Prism.iOS.Media namespace.

--- a/PrismFramework.iOS.csproj
+++ b/PrismFramework.iOS.csproj
@@ -88,7 +88,7 @@
     <Compile Include="UI\Controls\ActionMenu.cs" />
     <Compile Include="UI\Controls\MenuButton.cs" />
     <Compile Include="UI\Controls\MenuSeparator.cs" />
-    <Compile Include="UI\Media\AudioPlayer.cs" />
+    <Compile Include="Media\AudioPlayer.cs" />
     <Compile Include="Systems\Geolocation\Geolocator.cs" />
     <Compile Include="UI\StatusBar.cs" />
     <Compile Include="UI\Media\Imaging\BitmapImage.cs" />
