Implemented WritableBitmap class.

--- a/PrismFramework.iOS.csproj
+++ b/PrismFramework.iOS.csproj
@@ -47,6 +47,7 @@
     <Compile Include="UI\Controls\ActivityIndicator.cs" />
     <Compile Include="UI\Controls\MenuFlyout.cs" />
     <Compile Include="UI\Controls\Flyout.cs" />
+    <Compile Include="UI\Media\Imaging\WritableBitmap.cs" />
     <Compile Include="UI\Media\Transform.cs" />
     <Compile Include="UI\Shapes\Line.cs" />
     <Compile Include="UI\Views\ViewStack.cs" />
